--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     }
 
     .blinds {
+        font-size: clamp(36px, 9vw, 120px);
+        font-weight: bold;
+        margin-bottom: 2vw;
+    
+        /* segurança extra */
+        max-width: 100%;
+        overflow: hidden;
         display: inline-block;
         white-space: nowrap;
         text-align: center;
